--- a/src/genericComponents/menucss.css
+++ b/src/genericComponents/menucss.css
@@ -13,9 +13,8 @@
 }
 
 .menuItem:hover{
-  /*text-decoration: underline;*/
-  border-bottom: #D7D7D7;
-  border-bottom-width:3px;
+  border-bottom: #909090;
+  border-bottom-width:2px;
   border-left-color: transparent;
   border-right-color: transparent;
   border-top-color: transparent;
@@ -25,7 +24,7 @@
 
 .menuItem:focus{
   border-bottom: #909090;
-  border-bottom-width:3px;
+  border-bottom-width:2px;
   border-left-color: transparent;
   border-right-color: transparent;
   border-top-color: transparent;
@@ -43,7 +42,8 @@
 .logo {
   justify-content: flex-start;
   height: 30px;
-  background-color: rgba(211, 211, 211, 0.2);
+  background-color: #D7D7D7;
+  margin-bottom: -17px;
 }
 
 a{
@@ -59,5 +59,7 @@ list-style-type: none;
 }
 
 
-
+.menuBar{
+  background-color: #D7D7D7;
+}
 
