--- a/src/carousel/slider.css
+++ b/src/carousel/slider.css
@@ -1,53 +1,49 @@
- 
-  .container {
-    overflow: hidden;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    background-color: #D7D7D7;
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
 
-  }
-  
- 
-  
-  .item {
-    flex: 0 0 150px;
-    margin-left: 10px;
-    border-radius: 5px;
-    display: flex;
+.carousel {
+  display: flex;
+  overflow-x: scroll;
+  padding-bottom: 10px;
+}
+
+.item {
+  background-color: #42d7f5;
+  opacity: 0.7;
+  min-width: 20%;
+  margin: 2px;
+}
+
+.text {
+  color: "#001866";
+}
+
+.button {
+  background-color: #ffffff;
+  border: 1px solid #001866;
+  border-radius: 50px;
+  color: #001866;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 400px) {
+  .carousel {
     flex-direction: column;
-    background-color: rgba(144,144,144, 0.2) /*#909090*/;
-    }
+    overflow-y: scroll;
+  }
+}
 
-    .controls {
-        flex: 1 1 100%;
-        display: flex;
-        justify-content: space-between;
-        position: fixed;
-        width:100%;
-     }
+.posterImg{
+  height: 220px;
+}
 
-    .prev, .next{
-      border: none;
-      border-radius: 25px;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 12px 15px;
-      color: white;
-      font-size: 18px;
-      font-weight: bold;
-      line-height: 18px;
-      cursor: pointer;
-      display: fixed;
-   
-    }
-  
-    .posterImg{
-        height: 370px;
-    }
-
-    .centerTxt{
-        text-align: center;
-        font-size: 0.6rem;
-    }
+.centerTxt{
+  text-align: center;
+  font-size: 0.6rem;
+}
