--- a/src/carousel/slider.css
+++ b/src/carousel/slider.css
@@ -1,8 +1,14 @@
-.App {
+.carouselContainer {
   font-family: sans-serif;
   text-align: center;
+  background-color: #d7d7d7;
+  padding-top: 10px;
 }
 
+ ::-webkit-scrollbar {
+  display: none;
+}
+ 
 .carousel {
   display: flex;
   overflow-x: scroll;
@@ -10,7 +16,7 @@
 }
 
 .item {
-  background-color: #42d7f5;
+  background-color: #909090;
   opacity: 0.7;
   min-width: 20%;
   margin: 2px;
@@ -21,29 +27,32 @@
 }
 
 .button {
-  background-color: #ffffff;
-  border: 1px solid #001866;
-  border-radius: 50px;
-  color: #001866;
+  border: none;
+      border-radius: 25px;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 12px 15px;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 18px;
+      cursor: pointer;
+      display: fixed;
 }
 
 .buttons-container {
-  display: flex;
-  justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
+        position: fixed;
+        width:100%;
+        margin-top:-137px;
 }
 
-@media screen and (max-width: 400px) {
-  .carousel {
-    flex-direction: column;
-    overflow-y: scroll;
-  }
-}
 
-.posterImg{
+.posterImg {
   height: 220px;
 }
 
-.centerTxt{
+.centerTxt {
   text-align: center;
   font-size: 0.6rem;
 }
