--- a/src/genericComponents/slider.css
+++ b/src/genericComponents/slider.css
@@ -3,6 +3,7 @@
   text-align: center;
   background-color: #d7d7d7;
   padding-top: 10px;
+  z-index: 0;
 }
 
  ::-webkit-scrollbar {
@@ -13,6 +14,7 @@
   display: flex;
   overflow-x: scroll;
   padding-bottom: 10px;
+  z-index:0;
 }
 
 .item {
@@ -20,6 +22,7 @@
   opacity: 0.7;
   min-width: 20%;
   margin: 2px;
+  z-index:0;
 }
 
 .text {
@@ -42,7 +45,7 @@
 .buttons-container {
         display: flex;
         justify-content: space-between;
-        position: fixed;
+        position: absolute;
         width:100%;
         margin-top:-137px;
 }
@@ -50,6 +53,7 @@
 
 .posterImg {
   height: 220px;
+  z-index: 0;
 }
 
 .centerTxt {
