--- a/src/genericComponents/popup.css
+++ b/src/genericComponents/popup.css
@@ -1,42 +1,20 @@
 
-.modal {
-    display: block;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-  }
-
-
+  
 /* Modal Header */
 .modal-header {
     padding: 2px 16px;
     background-color: #909090;
     color: white;
-    z-index:1;
+    z-index:90;
   }
   
   /* Modal Body */
   .modal-body {
       padding: 2px 16px;
-      z-index:1;
+      z-index:90;
     }
   
-  /* Modal Footer */
-  .modal-footer {
-    padding: 2px 16px;
-    background-color: #909090;
-    color: white;
-    z-index:1;
-
-  }
-  
-  /* Modal Content */
+    /* Modal Content */
   .modal-content {
     position: relative;
     background-color: #fefefe;
@@ -47,15 +25,15 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    z-index:1;
+    z-index:90;
 
   }
   
   .close {
     color: #aaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-top:1%;
   }
   
   .close:hover,
@@ -68,13 +46,13 @@
   /* Add Animation */
   @keyframes animatetop {
     from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+    to {top: 20px; opacity: 1}
   }
 
   .popupBodyTop{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    margin-left:5%;
   }
 
   .moreDetails, .popupBodyBottom{
@@ -86,5 +64,52 @@
   }
 
   .moreDetails{
-      font-size: 20px;
+      font-size: 18px;
+      margin: 0px;
   }
+
+  .posterDetailImg{
+    height: 330px;
+    z-index: 90;
+  }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1040;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+    opacity: .5;
+  }
+  
+  .modal-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    outline: 0;
+  }
+  
+  .modal {
+    z-index: 100;
+    background: white;
+    position: relative;
+    margin: 1.75rem auto;
+    border-radius: 3px;
+    max-width: 500px;
+    padding: 2rem;
+  }
+  
+  .modal-header {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  
+
