--- a/src/genericComponents/menucss.css
+++ b/src/genericComponents/menucss.css
@@ -1,5 +1,4 @@
 .menuContainer {
-
   justify-content: space-around;
   align-content: flex-start;
 }
@@ -9,12 +8,12 @@
   padding: 10px;
   width: 77%;
   justify-content: center;
-  color:black;
+  color: black;
 }
 
-.menuItem:hover{
+.menuItem:hover {
   border-bottom: #909090;
-  border-bottom-width:2px;
+  border-bottom-width: 2px;
   border-left-color: transparent;
   border-right-color: transparent;
   border-top-color: transparent;
@@ -22,44 +21,54 @@
   color: black;
 }
 
-.menuItem:focus{
+.menuItemVisited{
+  display: flex;
+  padding: 10px;
+  width: 77%;
+  justify-content: center;
+  color: black;
   border-bottom: #909090;
-  border-bottom-width:2px;
+  border-bottom-width: 2px;
   border-left-color: transparent;
   border-right-color: transparent;
   border-top-color: transparent;
   border-style: solid;
-  color:black;
 }
 
+.menuItem:focus {
+  border-bottom: #909090;
+  border-bottom-width: 2px;
+  border-left-color: transparent;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  border-style: solid;
+  color: black;
+}
 
 .headerContainer {
   display: flex;
   flex-flow: row wrap;
-
 }
 
 .logo {
   justify-content: flex-start;
   height: 30px;
-  background-color: #D7D7D7;
+  background-color: #d7d7d7;
   margin-bottom: -17px;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-.liMenu{
-list-style-type: none;
+.liMenu {
+  list-style-type: none;
 }
 
-.immagineLogo{
-  height:50px;
+.immagineLogo {
+  height: 50px;
 }
 
-
-.menuBar{
-  background-color: #D7D7D7;
+.menuBar {
+  background-color: #d7d7d7;
 }
-
