--- a/src/genericComponents/popup.css
+++ b/src/genericComponents/popup.css
@@ -1,115 +1,143 @@
-
-  
 /* Modal Header */
 .modal-header {
-    padding: 2px 16px;
-    background-color: #909090;
-    color: white;
-    z-index:90;
-  }
-  
-  /* Modal Body */
-  .modal-body {
-      padding: 2px 16px;
-      z-index:90;
-    }
-  
-    /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-    z-index:90;
+  padding: 2px 16px;
+  background-color: #909090;
+  color: white;
+  z-index: 90;
+  align-items: center;
+}
 
-  }
-  
-  .close {
-    color: #aaa;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top:1%;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+/* Modal Body */
+.modal-body {
+  z-index: 90;
+  width: 100%;
+}
 
-  /* Add Animation */
-  @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 20px; opacity: 1}
-  }
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  /* width: 50%; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  z-index: 90;
+}
 
-  .popupBodyTop{
-    display: flex;
-    flex-flow: row wrap;
-    margin-left:5%;
-  }
+.close {
+  color: white;
+  font-size: 28px;
+  font-weight: bold;
+}
 
-  .moreDetails, .popupBodyBottom{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: left;
-    text-align: start;
-    padding:4%;
-  }
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  .moreDetails{
-      font-size: 18px;
-      margin: 0px;
+/* Add Animation */
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
   }
+  to {
+    top: 20px;
+    opacity: 1;
+  }
+}
 
-  .posterDetailImg{
-    height: 330px;
-    z-index: 90;
-  }
+.popupBodyTop {
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: #d7d7d7;
+  justify-content: flex-end;
+}
 
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1040;
-    width: 100vw;
-    height: 100vh;
-    background-color: #000;
-    opacity: .5;
-  }
-  
-  .modal-wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1050;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    outline: 0;
-  }
-  
-  .modal {
-    z-index: 100;
-    background: white;
-    position: relative;
-    margin: 1.75rem auto;
-    border-radius: 3px;
-    max-width: 500px;
-    padding: 2rem;
-  }
-  
-  .modal-header {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-  }
-  
+.moreDetails,
+.popupBodyBottom {
+  /* display: flex; */
+  /*     flex-flow: column wrap;
+ */
+  justify-content: left;
+  text-align: start;
+  align-self: center;
+}
 
+.moreDetails {
+  font-size: 14px;
+  margin: 0px;
+  position: relative;
+  margin-right: 4%;
+}
+
+.posterDetailImg {
+  height: 100%;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+
+.modal {
+  z-index: 100;
+  background: white;
+  position: relative;
+  margin: 1.75rem auto;
+  border-radius: 3px;
+  max-width: 500px;
+  padding: 2rem;
+}
+
+.modal-header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.description {
+  align-self: end;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.descriptionDetail {
+  margin: 2%;
+  padding: 2%;
+}
+
+.rate {
+  font-size: 26px;
+  list-style-type: none;
+  color: yellow;
+  text-shadow: 2px 2px 4px black;
+}
+
+.rateContainer {
+  display: flex;
+  flex-flow: row wrap;
+}
