--- a/src/responsive/responsive.css
+++ b/src/responsive/responsive.css
@@ -2,51 +2,89 @@
  * media queries
  */
 
+/* Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 575.98px) {
+  .xsmall-slider {
+    display: contents;
+  }
+  .posterImg{
+    height:122px;
+  }
+  hr {
+    margin-top: -10px;
+    margin-bottom: 3%;
+}
+.modal-content {
+  width: 95%;
+}
+}
 
- /* Extra small devices (portrait phones, less than 576px)*/
- @media (max-width: 575.98px) { 
-	.xsmall-slider{
-		display: contents;
-	}
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .xsmall-slider {
+    flex-direction: column;
   }
- 
- /* Small devices (landscape phones, 576px and up)*/
- @media (min-width: 576px) and (max-width: 767.98px) { 
-	.xsmall-slider{
-		flex-direction: column;
-	}
+  .posterImg{
+    height: 190px;
   }
- 
- /* Medium devices (tablets, 768px and up)*/
- @media (min-width: 768px) and (max-width: 991.98px) { 
+  .modal-content {
+    width: 50%;
+  }
+}
 
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .posterImg {
+    height: 220px;
+    z-index: 0;
   }
- 
- /* Large devices (desktops, 992px and up)*/
- @media (min-width: 992px) and (max-width: 1199.98px) { 
+  .modal-content {
+    width: 50%;
+  }
+}
 
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .posterImg {
+    height: 220px;
+    z-index: 0;
   }
- 
- /* Extra large devices (large desktops, 1200px and up)*/
- @media (min-width: 1200px) { 
-	.slider {
-		display: flex;
-		flex-direction: row;
-		list-style: none;
-		padding: 0;
-		margin-left: 235%;
-	
-	  }
+  .modal-content {
+    width: 50%;
   }
+}
 
-  
-  @media screen and (max-width: 400px) {
-	.carousel {
-	  flex-direction: column;
-	  overflow-y: scroll;
-	}
-	.buttons-container{
-	  display:none;
-	}
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+  .slider {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    margin-left: 235%;
   }
-  
+  .posterImg {
+    height: 220px;
+    z-index: 0;
+  }
+  .modal-content {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .carousel {
+    flex-direction: column;
+    overflow-y: scroll;
+  }
+  .buttons-container {
+    display: none;
+  }
+  .posterImg {
+    height: 220px;
+    z-index: 0;
+  }
+  .modal-content {
+    width: 95%;
+  }
+}
