--- a/src/genericComponents/slider.css
+++ b/src/genericComponents/slider.css
@@ -1,7 +1,7 @@
 .carouselContainer {
   font-family: sans-serif;
   text-align: center;
-  background-color: #d7d7d7;
+  background-color: #1b1b1b;
   padding-top: 10px;
   z-index: 0;
 }
@@ -18,7 +18,7 @@
 }
 
 .item {
-  background-color: #909090;
+  background-color: #1b1b1b;
   opacity: 0.7;
   min-width: 20%;
   margin: 2px;
@@ -34,8 +34,8 @@
   border-radius: 25px;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 12px 15px;
-  color: white;
-  font-size: 18px;
+  color: #61dbfb;
+  font-size: 28px;
   font-weight: bold;
   line-height: 18px;
   cursor: pointer;
