--- a/src/genericComponents/slider.css
+++ b/src/genericComponents/slider.css
@@ -1,9 +1,9 @@
 .carouselContainer {
-  font-family: sans-serif;
-  text-align: center;
+
   background-color: #1b1b1b;
-  padding-top: 10px;
-  z-index: 0;
+  display: flex;
+  flex-flow: column nowrap;
+  position: relative;
 }
 
 ::-webkit-scrollbar {
@@ -13,8 +13,8 @@
 .carousel {
   display: flex;
   overflow-x: scroll;
-  padding-bottom: 10px;
   z-index: 0;
+  position:relative;
 }
 
 .item {
@@ -32,22 +32,19 @@
 .button {
   border: none;
   border-radius: 25px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   padding: 12px 15px;
   color: #61dbfb;
-  font-size: 28px;
-  font-weight: bold;
-  line-height: 18px;
+  font-size: 70px;
   cursor: pointer;
   display: fixed;
 }
 
 .buttons-container {
-  display: flex;
   justify-content: space-between;
-  position: absolute;
-  width: 100%;
-  margin-top: -137px;
+  display: flex;
+  flex-flow: row nowrap;
+  
 }
 
 
