--- a/src/responsive/responsive.css
+++ b/src/responsive/responsive.css
@@ -7,16 +7,16 @@
   .xsmall-slider {
     display: contents;
   }
-  .posterImg{
-    height:122px;
+  .posterImg {
+    height: 122px;
   }
   hr {
     margin-top: -10px;
     margin-bottom: 3%;
-}
-.modal-content {
-  width: 95%;
-}
+  }
+  .modal-content {
+    width: 95%;
+  }
 }
 
 /* Small devices (landscape phones, 576px and up)*/
@@ -24,7 +24,7 @@
   .xsmall-slider {
     flex-direction: column;
   }
-  .posterImg{
+  .posterImg {
     height: 190px;
   }
   .modal-content {
@@ -46,11 +46,15 @@
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) and (max-width: 1199.98px) {
   .posterImg {
-    height: 220px;
+    height: 325px;
     z-index: 0;
   }
   .modal-content {
     width: 50%;
+  }
+  .imgHighlighted {
+    width: -webkit-fill-available;
+    height: auto;
   }
 }
 
@@ -64,11 +68,19 @@
     margin-left: 235%;
   }
   .posterImg {
-    height: 220px;
+    height: 325px;
     z-index: 0;
   }
   .modal-content {
     width: 50%;
+  }
+  .imgHighlighted {
+    width: -webkit-fill-available;
+    height: auto;
+  }
+  .randomHighlightedContainer {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -87,4 +99,60 @@
   .modal-content {
     width: 95%;
   }
+}
+
+.resizeHighlightedImg {
+  width: 100%;
+  height: 635px;
+  overflow: hidden;
+  position: relative;
+}
+
+.imgHighlighted {
+  width: -webkit-fill-available;
+  height: auto;
+  position: fixed;
+  margin-top: -6%;
+  z-index: 0;
+
+ 
+}
+.randomHighlightedContainer {
+  display: flex;
+  justify-content: flex-end;
+  flex-flow: row-reverse nowrap;
+  margin-top: -1%;
+  z-index: 0;
+}
+
+.titleHighlightedContainer {
+    width: 48%;
+    margin: 0px;
+    background: linear-gradient(to right,rgba(0,0,0,.9), rgba(0,0,0,.9) 75%, transparent 100%, rgba(0,0,0,.9) 127%);
+    position: absolute;
+    height: 697px;
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #b6eefd;
+
+}
+
+.titleHighlighted{
+  text-align-last: center;
+  font-family: fantasy;
+  margin-left: 1%;
+}
+
+.hrHighlighted{
+  margin-left: -120%;
+  color: #b6eefd;
+  border-color: #b6eefd;
+  background-color: #b6eefd;
+}
+
+.titleCategory{
+  background-color: rgba(0,0,0,0.5);
+  padding: 2px;
 }
