--- a/src/genericComponents/slider.css
+++ b/src/genericComponents/slider.css
@@ -11,7 +11,6 @@
 }
 
 .carousel {
-  display: flex;
   overflow-x: scroll;
   z-index: 0;
   position:relative;
@@ -52,4 +51,9 @@
 .centerTxt {
   text-align: center;
   font-size: 0.6rem;
+}
+
+
+.posterImg, .resizeHighlightedImg{
+  cursor: pointer;
 }
