--- a/src/css/menucss.css
+++ b/src/css/menucss.css
@@ -3,6 +3,11 @@
   align-content: flex-start;
 }
 
+.menuBar{
+  background-color: rgba(0,0,0,0.9);
+
+}
+
 .menuItem {
   display: flex;
   padding: 10px;
@@ -50,7 +55,6 @@
   flex-flow: row wrap;
   position: relative;
   z-index: 100;
-  background-color: rgba(0,0,0,0.5);
   align-items: flex-end;
 }
 
@@ -61,7 +65,7 @@
   display: flex;
   align-content: flex-end;
   justify-content: flex-end;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.9);
   position: relative;
   z-index: 100;
 }
