--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -14,6 +14,7 @@
   overflow-x: scroll;
   z-index: 0;
   position:relative;
+  width:100%
 }
 
 .item {
@@ -30,13 +31,10 @@
 
 .button {
   border: none;
-  border-radius: 25px;
   background-color: transparent;
-  padding: 12px 15px;
   color: #61dbfb;
   font-size: 70px;
   cursor: pointer;
-  display: fixed;
 }
 
 .buttons-container {
